# funzionera

./: .readthedocs.yaml  README.md  lumache.py  pyproject.toml  relAIClasses.py  relAIPrivateFunctions.py
docs/: requirements.txt
