[build-system]
requires = ["flit_core >=3.2,<4",
            "setuptools>=42",
            "wheel",
            "numpy", 
            "scikit-learn", 
            "torch", 
            "plotly", 
            "matplotlib",
            "collections",
            "random"]
            
build-backend = "flit_core.buildapi"

[project]
name = "lumache"
authors = [{name = "Graziella", email = "graziella@lumache"}]
dynamic = ["version", "description"]
